# MAJECT

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION.md  setup.ps1
BEVAL/: README.md  package-lock.json  package.json
BEVAL/behavioral_analyzer/: METRICS_DOCUMENTATION.md  pyproject.toml
BEVAL/behavioral_analyzer/behavioral_analyzer/: config.py  unified_analyzer.py  utils.py  video_analyzer.py  web_ui.py
BEVAL/behavioral_analyzer/templates/: dashboard.html
BEVAL/public/: index.html  manifest.json  sw.js
BEVAL/server/: pyproject.toml
BEVAL/server/core/: conversational_agent.py  state_agent.py  tool_handler.py  websocket_handler.py
BEVAL/src/: App.test.tsx  reportWebVitals.ts
BEVAL/src/agents/: AgentRegistry.tsx
BEVAL/src/contexts/: ConversationMemoryContext.tsx  LanguageContext.tsx
BEVAL/venv312/: pyvenv.cfg
CONVEI/: README.md  package-lock.json
CONVEI/src/: App.scss  App.tsx  index.css  types.ts
FUSION/: .gitignore  QUICKSTART.md  TEST_RESULTS.md  check_collector.py  check_metrics_coverage.py  fusion.db-shm  pyproject.toml  run.ps1  run.sh  start_fusion_uv.py  test_results.json
FUSION/api/: __main__.py  server.py
FUSION/config/: config.json
FUSION/db/: init_db.py  models.py  schema.sql
FUSION/integration/: __main__.py  beval_collector.py  metrics_processor.py
MajorProject_EC/: .gitignore  package.json
MajorProject_EC/src/: App.test.tsx  App.tsx  index.tsx  types.ts
behavioral_analyzer/: README.md
behavioral_analyzer/behavioral_analyzer/: object_detector.py
behavioral_analyzer/templates/: minimal_dashboard.html
(+78 files in other folders)
